fixed gap

--- a/src/PalDeck/PalDeck.css
+++ b/src/PalDeck/PalDeck.css
@@ -76,7 +76,7 @@
   .PalTitle {
     margin-top: 4px;
     font-size: 10px;
-    gap: 6px;
+    gap: 4px;
   }
   .PalImages {
     max-height: 80px;
